finish Chapter 3.4.8